fix dark mode bug

--- a/css/themes.css
+++ b/css/themes.css
@@ -104,6 +104,14 @@
   color: white;
 }
 
+.dark .dropdown-content li > a {
+  background-color: #1c1c1c;
+  color: #3fe0d1;
+}
+
+.dark .dropdown-content li > a:hover {
+  background-color: #333;
+}
 
 .dark .dropdown-content {
   background-color: #1c1c1c;
